test/testdata/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: test-application
    from-properties1: @@FOO@@
    from-properties2: "@@FOO@@"
  name: test-application
spec:
  replicas: 1
  selector:
    deploymentconfig: test-application
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: test-application
        deploymentconfig: test-application
    spec:
      containers:
        - image: artifactory.six-group.net/tkb16/request-logger:latest
          imagePullPolicy: IfNotPresent
          name: test-application
          ports:
            - containerPort: 8080
              protocol: TCP
  triggers: []
