test/testdata/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: test-application
  name: test-application
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: test-application
    weight: 100
  wildcardPolicy: None
