test/testdata/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-application
  name: test-application
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: test-application
